static/cilium/mediabot-pong.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mediabot-pong
  labels:
    org: empire
    class: mediabot
spec:
  containers:
  - name: pong
    image: pong
    imagePullPolicy: Never
