static/cilium/mediabot.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mediabot
  labels:
    org: empire
    class: mediabot
spec:
  containers:
  - name: ping
    image: ping
    imagePullPolicy: Never
